pre-merge-output.txt
==================================
Running Pre-Merge Checks
==================================

âœ“ Poetry found

ðŸ“¦ Ensuring dependencies are installed...
Installing dependencies from lock file

No dependencies to install or update

Installing the current project: gkc (0.1.0)

ðŸ” Running ruff linter...
gkc/__init__.py:38:1: I001 [*] Import block is un-sorted or un-formatted
   |
37 |   # Authentication (core infrastructure)
38 | / from gkc.auth import AuthenticationError, OpenStreetMapAuth, WikiverseAuth
39 | | 
40 | | # Bottler (final output transformation)
41 | | from gkc.bottler import (
42 | |     ClaimBuilder,
43 | |     DataTypeTransformer,
44 | |     Distillate,
45 | |     SnakBuilder,
46 | | )
47 | | 
48 | | # Cooperage (Barrel Schema and reference management)
49 | | from gkc.cooperage import (
50 | |     CooperageError,
51 | |     fetch_entity_rdf,
52 | |     fetch_schema_specification,
53 | |     get_entity_uri,
54 | |     validate_entity_reference,
55 | | )
56 | | 
57 | | # Entity Profiles (GKC Entity Profile definitions)
58 | | from gkc.entity_profile import GKCEntityProfile
59 | | 
60 | | # Recipe (Wikidata Barrel Recipe Builder)
61 | | from gkc.recipe import PropertyLedgerEntry, RecipeBuilder, SpecificationExtractor
62 | | 
63 | | # Sitelinks (cross-reference validation)
64 | | from gkc.sitelinks import (
65 | |     SitelinkValidator,
66 | |     check_wikipedia_page,
67 | |     validate_sitelink_dict,
68 | | )
69 | | 
70 | | # SPARQL (query utility, cross-cutting)
71 | | from gkc.sparql import (
72 | |     SPARQLError,
73 | |     SPARQLQuery,
74 | |     execute_sparql,
75 | |     execute_sparql_to_dataframe,
76 | | )
77 | | 
78 | | # ShEx validation utilities
79 | | from gkc.shex import ShexValidationError, ShexValidator
80 | | 
81 | | # Language Configuration
   | |_^ I001
82 |   # Package-level language settings for multilingual data handling
83 |   _DEFAULT_LANGUAGES: Union[str, list[str]] = "en"
   |
   = help: Organize imports

gkc/spirit_safe.py:19:1: SyntaxError: Unexpected indentation
   |
17 | # ShEx validation has been moved to gkc.shex - use ShexValidator instead.
18 | 
19 |         """
   | ^
20 |         Evaluate RDF data against the Barrel Schema specification.
   |

gkc/spirit_safe.py:54:1: SyntaxError: unindent does not match any outer indentation level
   |
52 |         return self
53 | 
54 |     def check(self) -> "SpiritSafeValidator":
   | ^
55 |         """
56 |         Inspection: Load specification, load RDF, and evaluate in one call.
   |

gkc/spirit_safe.py:75:1: SyntaxError: unindent does not match any outer indentation level
   |
73 |         return self
74 | 
75 |     def is_valid(self) -> bool:
   | ^
76 |         """
77 |         Check if validation passed.
   |

gkc/spirit_safe.py:121:1: SyntaxError: unindent does not match any outer indentation level
    |
119 |         return False
120 | 
121 |     def __repr__(self) -> str:
    | ^
122 |         """String representation of validator."""
123 |         parts = []
    |

gkc/spirit_safe.py:135:1: SyntaxError: Expected dedent, found end of file
    |
133 |         params = ", ".join(parts) if parts else ""
134 |         return f"SpiritSafeValidator({params})"
    |

tests/test_cli.py:469:89: E501 Line too long (89 > 88)
    |
467 |     monkeypatch.setattr("gkc.cli.ShexValidator", FakeShexValidator)
468 | 
469 |     exit_code = cli.main(["--json", "shex", "validate", "--qid", "Q42", "--eid", "E502"])
    |                                                                                         ^ E501
470 |     assert exit_code == 0
    |

tests/test_cli.py:502:89: E501 Line too long (89 > 88)
    |
500 |     monkeypatch.setattr("gkc.cli.ShexValidator", FakeShexValidator)
501 | 
502 |     exit_code = cli.main(["--json", "shex", "validate", "--qid", "Q42", "--eid", "E502"])
    |                                                                                         ^ E501
503 |     assert exit_code == 1  # Validation failed
    |

tests/test_shex_integration.py:168:21: F821 Undefined name `SpiritSafeValidator`
    |
166 |         # Use a known valid tribe: Wanapum (Q14708404)
167 |         # against tribe schema (E502)
168 |         validator = SpiritSafeValidator(
    |                     ^^^^^^^^^^^^^^^^^^^ F821
169 |             eid="E502",  # Tribe schema
170 |             qid="Q14708404",  # Wanapum tribe
    |

tests/test_shex_integration.py:202:21: F821 Undefined name `SpiritSafeValidator`
    |
201 |         # Now validate using the saved files
202 |         validator = SpiritSafeValidator(
    |                     ^^^^^^^^^^^^^^^^^^^ F821
203 |             schema_file=str(schema_file),
204 |             rdf_file=str(rdf_file),
    |

Found 10 errors.
[*] 1 fixable with the `--fix` option.
